// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageTitle /> renders a H1 page title 1`] = `
<div>
  <header
    class="sc-gEvEer iwWTzJ"
  >
    <h1
      class="sc-fqkvVR hZWjIQ"
    >
      <span
        class="sc-aXZVg ebuZrC"
      />
      Lorem Ipsum
    </h1>
  </header>
</div>
`;

exports[`<PageTitle /> renders a left striped shifted H1 page title 1`] = `
<div>
  <header
    class="sc-gEvEer bKmRPt"
  >
    <h1
      class="sc-fqkvVR cshUl"
    >
      <span
        class="sc-aXZVg jHdfHu"
      />
      Lorem Ipsum
    </h1>
  </header>
</div>
`;
